# category-note-backend

./: .dockerignore  .gitignore  README.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml  requirements.txt  run.py  test.db  vitest.config.ts
.taskmaster/: state.json
Dockerfiles/: database.Dockerfile
alembic/: env.py
alembic/versions/: 04fc60a82ac9_initial_migration_fixed_url_index.py  1.0_데이터베이스_초기_세팅.py
app/: __init__.py  main.py
app/configs/: __init__.py  database.py  oauth.py
app/controllers/: auth_controller.py  bookmark_controller.py  url_controller.py
app/models/: __init__.py  bookmark.py  url.py  user.py
app/routers/: auth.py  bookmark.py  url.py
app/schemas/: __init__.py  bookmark.py  url.py  user.py
database/: my.cnf
src/app/auth/login/: page.tsx
src/app/auth/success/: page.tsx
src/components/auth/: LoginPage.test.tsx  LoginPage.tsx
src/stores/: auth.test.ts  auth.ts
src/test/: setup.ts  utils.test.ts
src/types/: index.ts
tests/: __init__.py  conftest.py  test_auth.py  test_bookmark.py  test_controllers.py  test_models.py  test_url.py
